# day_trade

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pre-commit-hooks-readme.md  .ruff.toml  =8.2.0  ACCURACY_IMPROVEMENT_PLAN.md  APM_OBSERVABILITY_INTEGRATION_REPORT.md  BOATRACE_PROJECT_PLAN.md  CHANGES.md  CLAUDE.md  CODE_REVIEW_REPORT.md  COMPREHENSIVE_DOCUMENTATION.md  COMPREHENSIVE_PHASES_COMPLETION_SUMMARY.md  COMPREHENSIVE_SOURCE_CODE_REVIEW_REPORT.md  COMPREHENSIVE_SYSTEM_DOCUMENTATION.md  CONTRIBUTING.md  DEPENDENCY_MANAGEMENT.md  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.production  EVENT_DRIVEN_SIMULATION_REPORT.md  EXCEPTION_HANDLING_IMPROVEMENT_PLAN.md  FINAL_INTEGRATION_REPORT.md  FINAL_RELEASE_REPORT.md  IMPROVEMENT_RECOMMENDATIONS.md  INTEGRATION_PLAN_ISSUE_870.md  ISSUE-analysis-system-limitations.md  ISSUE-company-names.md  ISSUE-missing-company-names.md  ISSUE-personal-investor-features.md  ISSUE-web-ui-improvements.md  ISSUE315_COMPLETION_REPORT.md  ISSUE318_COMPLETION_REPORT.md  ISSUE_366_HFT_ARCHITECTURE_DESIGN.md  ISSUE_366_HFT_IMPLEMENTATION_COMPLETE.md  ISSUE_376_IMPLEMENTATION_SUMMARY.md  ISSUE_377_IMPLEMENTATION_SUMMARY.md  (+696 more)
.claude/: settings.local.json
.github/: CONFLICT_DETECTION.md  DEPLOYMENT_GUIDE.md
alembic/: env.py
alert_data/: alert_log.txt
api_gateway/: docker-compose.kong.yml
backup/: backup_manager.py
benchmarks/: cache_performance_benchmark.py
cache/: config.py
catboost_info/: learn_error.tsv  test_error.tsv  time_left.tsv
config/: .gitguardian.yaml  .pre-commit-config.yaml  accuracy_enhancement_config.yaml  alert.rules  analysis.json  auto_update_optimizer_config.yaml  base.json  boatrace_config.yaml  config.json  config_development.json  config_production.json  config_staging.json  coverage_config.json  dashboard_advanced_config.yaml  dashboard_config.json  dashboard_config.yaml  data_provider_config.yaml  data_sources.yaml  data_sources_improved.yaml  database_production.yaml  database_test.yaml  day_trading_config.json  deployment.json  development.json  gunicorn.conf.py  hyperparameter_spaces.yaml  indicators_config.json  ml.json  model_integration.yaml  monitoring.json  optimization_config.json  optimization_config.yaml  patterns_config.json  performance_thresholds.yaml  production.json  production_deployment_config.json  quality_config.json  risk_management.json  screening_config.json  security.json  (+9 more)
config_migration_backup/: action.yml  alertmanager.yml  comprehensive-ci.yml  config_production.yaml  conflict-auto-resolver.yml  conflict-detection-config.yml  database_production.yaml  datasources.yml  deployment_20250819_075354.yaml  development.yaml  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.production.yml  enhanced_prediction.yaml  ingress.yaml  market_calendar.yaml  multi_timeframe_config.yaml  prediction_enhancement_config.yaml  risk_settings.yaml  service.yaml  symbol_selection_criteria.yaml  system_integration.yaml
data/: trading.db-shm  trading.db-wal
data_cache/: 4689_3mo.parquet  4689_6mo.parquet  4751_1mo.parquet  4751_1y.parquet  4751_2mo.parquet  4751_2y.parquet  4751_3mo.parquet  4751_5d.parquet  4751_5y.parquet  4751_60d.parquet  4751_6mo.parquet  6098_3mo.parquet  6098_6mo.parquet  6861_1mo.parquet  6861_2mo.parquet  6861_3mo.parquet  6861_6mo.parquet  7203_1mo.parquet  7203_1y.parquet  7203_2mo.parquet  7203_2y.parquet  7203_3mo.parquet  7203_4mo.parquet  7203_5d.parquet  7203_5y.parquet  7203_60d.parquet  7203_6mo.parquet  8306_1mo.parquet  8306_1y.parquet  8306_2mo.parquet  8306_2y.parquet  8306_3mo.parquet  8306_5d.parquet  8306_6mo.parquet  9984_1mo.parquet  9984_1y.parquet  9984_2mo.parquet  9984_2y.parquet  9984_3mo.parquet  9984_5y.parquet  (+6 more)
deployment/: .env.development  .env.production  .env.staging  config_development.yaml  config_production.yaml  config_staging.yaml  docker-compose.development.yml  docker-compose.production.yml  docker-compose.staging.yml  nginx_development.conf  nginx_production.conf  nginx_staging.conf  production_setup.py
disaster_recovery/: dr_manager.py
docker/: .dockerignore  README.md  docker-compose.yml
docs/: APPLICATION_OVERVIEW.md  AUTO_UPDATE_OPTIMIZATION.md  CHANGES.md  CHART_FILE_PATH_SECURITY_ENHANCEMENT_REPORT.md  DATABASE_SECURITY_ENHANCEMENT_REPORT.md  DATA_IO_OPTIMIZATION_COMPLETION_REPORT.md  DUPLICATE_FILES_INTEGRATION_PLAN.md  ENHANCED_PERFORMANCE_MONITORING.md  EXTERNAL_API_CLIENT_SECURITY_ENHANCEMENT_REPORT.md  FEATURE_EFFICIENCY_SYSTEM_COMPLETION_REPORT.md  GENERATIVE_AI_RISK_MANAGEMENT_ARCHITECTURE.md  LLXPRT.md  MULTI_ASSET_PORTFOLIO_AI_IMPLEMENTATION_REPORT.md  NEXT_GEN_AI_ARCHITECTURE.md  NEXT_GEN_AI_IMPLEMENTATION_REPORT.md  PERFORMANCE_OPTIMIZATION_GUIDE.md  PERFORMANCE_REPORT.md  PHASE_E_IMPLEMENTATION_GUIDE.md  PHASE_E_SYSTEM_QUALITY_ENHANCEMENT_PLAN.md  PHASE_F_NEXT_GENERATION_EXPANSION_PLAN.md  PPO_IMPLEMENTATION_REPORT.md  PRODUCTION_SETUP_GUIDE.md  PRODUCTION_SETUP_GUIDE_UNIFIED.md  README_ORGANIZED.md  REALTIME_SYSTEM_ARCHITECTURE.md  REFACTORING_SUMMARY.md  SENTIMENT_ANALYSIS_IMPLEMENTATION_REPORT.md  TEST_COVERAGE_IMPROVEMENT_REPORT.md  TEST_PERFORMANCE_OPTIMIZATION_REPORT.md  TRADE_MANAGER_SECURITY_ENHANCEMENT_REPORT.md  UNIFIED_OPTIMIZATION_SYSTEM_USER_GUIDE.md  access_control_audit_procedure.md  ci_cd_improvements_summary.md  dependency_management.md  ensemble_strategy.md  implementation_plan.md  interactive_mode.md  issue_417_completion_report.md  merge_conflict_detection.md  microservices_architecture_design.md  (+6 more)
examples/: demo_advanced_formatters.py  demo_day_trading_engine.py  trading_engine_example.py
frontend/: package.json
hyperparameter_optimization/: optimizer.py
infrastructure/: README.md
integration_tests/: accuracy_validation.py  performance_benchmark.py  system_integration_test.py  system_optimization.py
k8s/: deploy.sh  deployment.yaml  hpa.yaml  service.yaml
logs/: enhanced_data_provider.log.2025-08-16  (+1 more)
migrations/: env.py  (+1 more)
src/day_trade/performance/rust_core/: Cargo.toml
src/day_trade/performance/rust_core/src/: lib.rs
(+2400 files in other folders)
