[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "day-trade"
version = "1.0.0"
description = "Automated day trading system with ensemble strategy"
authors = [
    {name = "DayTrade Team", email = "team@daytrade.com"}
]
readme = "README.md"
requires-python = ">=3.8,<3.13"
dependencies = [
    # Core dependencies - CLI and UI
    "click>=8.1.0,<9.0",
    "rich>=13.0.0,<15.0",
    "prompt_toolkit>=3.0.0,<4.0",

    # Data analysis and computation
    "pandas>=2.0.0,<3.0",
    "numpy>=1.24.0,<2.0",  # NumPy 2.x has breaking changes
    "scipy>=1.10.0,<2.0",

    # Data sources and APIs
    "yfinance>=0.2.28,<0.3.0",
    "pandas-datareader>=0.10.0,<1.0",

    # Technical analysis
    "ta>=0.11.0,<1.0",
    "pandas-ta>=0.3.14b,<1.0",
    "scikit-learn>=1.3.0,<2.0",

    # Database
    "sqlalchemy>=2.0.0,<3.0",
    "alembic>=1.13.0,<2.0",

    # Utilities
    "python-dotenv>=1.0.0,<2.0",
    "pydantic>=2.0.0,<3.0",
    "structlog>=23.0.0,<25.0",
    "tenacity>=8.2.0,<9.0",
    "psutil>=5.9.0",  # Performance monitoring (flexible version)

    # Security (Issue #419)
    "cryptography>=41.0.0,<43.0",  # Encryption support
    "pyotp>=2.9.0,<3.0",  # TOTP/MFA support
    "qrcode[pil]>=7.4.0,<8.0",  # QR code generation for MFA
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial :: Investment",
    "Typing :: Typed",
]

[project.optional-dependencies]
test = [
    # テスト関連
    "pytest>=7.4.0,<9.0",
    "pytest-cov>=4.1.0,<6.0",
    "pytest-mock>=3.10.0,<4.0",
    "pytest-xdist>=3.0.0,<4.0",
    "requests-mock>=1.12.0,<2.0",
]
dashboard = [
    # ダッシュボード・リアルタイム通信関連
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "websockets>=11.0",
]
mlops = [
    "mlflow>=2.0.0,<3.0",
]
dev = [
    # コード品質・フォーマット
    "black>=23.0.0,<25.0",
    "mypy>=1.4.0,<2.0",
    "ruff==0.1.15",

    # セキュリティ・品質チェック
    "bandit>=1.7.0,<2.0",
    "safety>=2.0.0,<4.0",
    "pip-audit>=2.6.0,<3.0",  # 追加のセキュリティチェック

    # Git hooks・プリコミット
    "pre-commit>=3.3.0,<4.0",

    # ドキュメント生成
    "sphinx>=7.0.0,<9.0",
    "sphinx-rtd-theme>=1.3.0,<3.0",

    # パフォーマンス測定
    "memory-profiler>=0.61.0,<1.0",
    "line-profiler>=4.0.0,<5.0",

    # 開発用ユーティリティ
    "ipython>=8.0.0,<9.0",
    "jupyter>=1.0.0,<2.0",
    "pip-tools>=7.0.0,<8.0",

    # 依存関係管理
    "pip-check-reqs>=2.0.0,<3.0",  # 未使用依存関係チェック
    "deptry>=0.12.0,<1.0",  # 依存関係分析
]

# Ruff configuration
[tool.ruff]
# Same as Black.
line-length = 88

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "alembic",
]

# Assume Python 3.8+
target-version = "py38"

[tool.ruff.lint]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # Pyflakes
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "SIM", # flake8-simplify
    "I",  # isort
    "N",  # pep8-naming
    "C90", # McCabe complexity
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "N806",  # variable name should be lowercase (for pandas compatibility)
    "N803",  # argument name should be lowercase (for ML X, y compatibility)
    "B007",  # Loop control variable not used within loop body
    "F841",  # Local variable is assigned to but never used
    "F821",  # Undefined name
    "F401",  # imported but unused
    "E402",  # Module level import not at top of file
    "SIM118", # Use `key in dict` instead of `key in dict.keys()`
    "E722",  # Do not use bare `except`
    "B904",  # Within an `except` clause, raise exceptions with `raise ... from err` or `raise ... from None`
    "SIM117", # Use a single `with` statement with multiple contexts instead of nested `with` statements
    "SIM102", # Use a single `if` statement instead of nested `if` statements
    "SIM105", # Use `contextlib.suppress(Exception)` instead of `try`-`except`-`pass`
    "SIM108", # Use ternary operator instead of `if`-`else`-block
    "SIM114", # Combine `if` branches using logical `or` operator
    "N812",  # Lowercase imported as non-lowercase
    "N801",  # Class name should use CapWords convention
    "N802",  # Function name should be lowercase
    "B017",  # `pytest.raises(Exception)` should be considered evil
    "B023",  # Function definition does not bind loop variable
    "B027",  # `IRiskPlugin.cleanup` is an empty method in an abstract base class, but has no abstract decorator
    "B034",  # `re.split` should pass `maxsplit` and `flags` as keyword arguments
    "E741",  # Ambiguous variable name
    # FMT rule removed - invalid selector
]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
# Tests can use magic values, assertions, and imports
"tests/**/*" = ["PLR2004", "S101", "F403", "F405"]
# Demo files can be more relaxed
"demo_*.py" = ["T201", "S101"]
"*_demo.py" = ["T201", "S101"]
"example_*.py" = ["T201", "S101"]

# Black formatting configuration
[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | alembic
)/
'''

# MyPy configuration moved to mypy.ini to resolve path conflicts

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q --tb=no --maxfail=1 -x --disable-warnings --no-header --no-summary -p no:cacheprovider"
testpaths = [
    "tests"
]
python_files = [
    "test_*.py",
    "*_test.py",
]
markers = [
    "integration: marks tests as integration tests (run with --integration)",
    "slow: marks tests as slow (run with --slow)",
    "unit: marks tests as unit tests (default)",
]
filterwarnings = [
    "ignore::DeprecationWarning:pandas.*",
    "ignore:.*Bitwise inversion.*:DeprecationWarning",
    "ignore:.*R\\^2 score is not well-defined.*:sklearn.exceptions.UndefinedMetricWarning",
    "ignore:.*Remove `format_exc_info`.*:UserWarning",
]

# Coverage configuration
[tool.coverage.run]
source = ["src"]
branch = true
parallel = true
concurrency = ["thread", "multiprocessing"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*_test.py",
    "*/demo_*.py",
    "*_demo.py",
    "*/example_*.py",
    "*/alembic/*",
    "*/migrations/*",
    "*/__main__.py",
    # 未テストの最適化・拡張モジュール (将来のテスト対象)
    "*/ensemble_voting_validation.py",
    "*/ml_performance_benchmark.py",
    "*/optimized_*.py",
    "*/enhanced_*.py",
    "*/screener_original.py",
    "*/database_backup.py",
    "*/base_backup.py",
    "*/database_optimization_strategies.py",
    # CLI・自動化モジュール (統合テストでカバー)
    "*/enhanced_main.py",
    "*/optimized_orchestrator.py",
    "*/auto_optimizer.py",
    "*/orchestrator.py",
    # ユーティリティ・拡張モジュール (機能的な影響は限定的)
    "*/api_resilience.py",
    "*/i18n_messages.py",
    "*/performance_analyzer.py",
    "*/performance_optimizer.py",
    "*/windows_console_fix.py",
    "*/advanced_backtest.py",
    # 大規模なCLI・管理モジュール (統合テストでカバー)
    "*/watchlist_commands.py",
    "*/bulk_operations.py",
    "*/main.py",
]

[tool.coverage.report]
# カバレッジレポートの詳細設定
show_missing = true
skip_covered = false
precision = 2
sort = "Cover"
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "if TYPE_CHECKING:",
    "pass",
    "\\.\\.\\.",
]

# カバレッジの最小しきい値設定 - Issue #415対応
# 段階的な改善計画: 10% -> 20% -> 30% -> 50%
# Phase 2: 品質ゲートシステム統合により30%に向上
fail_under = 30

[tool.coverage.html]
# HTMLレポート生成設定
directory = "htmlcov"
show_contexts = true
skip_covered = false

[tool.coverage.xml]
# XMLレポート生成設定（CI用）
output = "coverage.xml"

[tool.coverage.json]
# JSONレポート生成設定
output = "coverage.json"
show_contexts = true

# MyPy type checker configuration
[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
show_error_codes = true
cache_dir = ".mypy_cache"
explicit_package_bases = true
namespace_packages = true
exclude = [
    "tests/",
    "build/",
    "dist/",
    ".venv/",
    "venv/",
    "alembic/",
    "scripts/",
]
# 高速化のため、厳格度を下げる
no_strict_optional = true
allow_redefinition = true

# Bandit security linter configuration
[tool.bandit]
exclude_dirs = ["tests", "docs", "scripts"]
skips = ["B101", "B601"]  # Skip assert_used and shell=True warnings
