[package]
name = "ultra_fast_core"
version = "0.1.0"
edition = "2021"
authors = ["DayTrade HFT Team"]
description = "Ultra-low latency HFT core engine in Rust"

[lib]
name = "ultra_fast_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
# 並行処理・Lock-free構造
crossbeam = "0.8"
crossbeam-channel = "0.5"
parking_lot = "0.12"

# メモリ管理・アロケーター
jemallocator = { version = "0.5", optional = true }
mimalloc = { version = "0.1", optional = true }

# 数値計算・SIMD
num = "0.4"
num-traits = "0.2"
simdeez = "1.0"

# 時間・タイミング
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"

# ネットワーク（将来のDPDK統合用）
tokio = { version = "1.0", features = ["net", "rt"], optional = true }
mio = { version = "0.8", optional = true }

# シリアライゼーション
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# ログ・デバッグ
log = "0.4"

# プラットフォーム依存
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_SystemInformation"
] }

[target.'cfg(unix)'.dependencies]
nix = "0.27"

[features]
default = ["jemalloc"]
jemalloc = ["jemallocator"]
mimalloc_allocator = ["mimalloc"]
network = ["tokio", "mio"]
dpdk = []  # 将来のDPDK統合用

[profile.release]
# 極限最適化設定
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
overflow-checks = false
debug-assertions = false
incremental = false

[profile.release.build-override]
opt-level = 3
codegen-units = 1